--- a/_episodes_rmd/13-joins.Rmd
+++ b/_episodes_rmd/13-joins.Rmd
@@ -60,12 +60,17 @@ gapcent <- gapminder %>% inner_join(centroids, by=c("country"="SHORT_NAME"))
 
 
 ```{r}
-# Olympic medal table?
+# Olympic medal table - all the loading and cleaning will be done outwith the lesson
+# Just get participants to load cleaned version
 
 library(rvest)
 
-medal_page <- read_html("https://en.wikipedia.org/wiki/2016_Summer_Olympics_medal_table") %>% 
-  html_node(.headerSort:nth-child(2))
+medals <- read_html("https://en.wikipedia.org/wiki/2008_Summer_Olympics_medal_table") %>% 
+  html_nodes(xpath='//*[@id="mw-content-text"]/div/table[2]') %>% html_table(fill=TRUE)
+medals <- medals[[1]]
 
+medals <- medals %>%
+  filter(Rank != "Total (87 NOCs)") %>% 
+  mutate(country=stringr::str_split(NOC, " \\(", n=1))
 ```
 
